--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,16 @@
 # BEGIN_KITTY_THEME
 # lemongrass
+
+font_family Lekton Nerd Font Mono
+font_size 12
+
+cursor_shape beam
+cursor_blink_interval 0.5
+cursor_stop_blinkin_after 30.0
+
+scrollback_lines 3000
+
+window_padding_width 10
+
 include current-theme.conf
 # END_KITTY_THEME
