--- a/.config/sway/config
+++ b/.config/sway/config
@@ -10,7 +10,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term kitty
+set $term alacritty
 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
@@ -20,7 +20,7 @@ set $menu wofi --show drun | xargs swaymsg exec --
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg ~/wallpaper.png fill
+output * bg ~/Downloads/brutal1.jpg fill
 #
 # Example configuration:
 #
@@ -54,6 +54,11 @@ output * bg ~/wallpaper.png fill
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
+
+input "2:10:TPPS/2_Elan_TrackPoint" {
+	accel_profile "flat"
+	pointer_accel 0.5
+}
 
 ### Key bindings
 #
@@ -220,22 +225,22 @@ include /etc/sway/config.d/*
 
 # colors
 
-font pango:Lekton Nerd Font Mono 11
+font pango:Dina 10
 set $accent #faa0b7
 
 # color vars
-set $background #1a0d1b
-set $color_urgent #cb515d
-set $text_color #facfd9
+set $background #080f0d
+set $color_urgent #a1787f
+set $text_color #ceccc8
 set $title_bg_unfocused #1A0D1B
-set $title_outline_active #faa0b7
+set $title_outline_active #ceccc8
 set $title_outline_unfocused #b55088
 
 # class			border				backgr.				text		indica.			child_border
 client.background	$background	
 client.focused		$title_outline_active		$background			$text_color	$title_outline_active	$title_outline_active
 client.focused_inactive	$title_outline_unfocused	$title_outline_unfocused	$text_color	$text_color		$title_outline_unfocused
-client.unfocused	$title_outline_unfocused	$title_bg_unfocused		$text_color	$title_outline_active	
+client.unfocused	$title_outline_unfocused	$background		$text_color	$title_outline_active	
 client.urgent		$color_urgent			$color_urgent			$color_urgent	$color_urgent		$color_urgent
 
 # add gaps
@@ -251,6 +256,6 @@ blur enable
 blur_passes 1
 blur_radius 3
 blur_xray disable
-corner_radius 5
+corner_radius 2
 default_dim_inactive 0.5
 titlebar_separator disable
